boreal/tests/assets/invalid_files/compilation/unknown_identifier_field.yar
// [error: unknown field "myn"]
import "pe"

rule a {
    condition:
        pe.myn == 2
}
